--- a/views/partials/_flashmsg.handlebars
+++ b/views/partials/_flashmsg.handlebars
@@ -1,6 +1,6 @@
-{{#if flashMessenger }}
+{{#if flashMessenger}}
 {{#each flashMessenger.alertsBeforeFlush}}
-<div class="alert alert-{{this.type}} {{#if this.canBeDismissed}}alertdismissible{{/if}} z-index:9999">
+<div class="alert alert-{{this.type}} {{#if this.canBeDismissed}}alert-dismissible{{/if}} z-index:9999">
 {{#if this.canBeDismissed}}
 <a href="#" class="close" data-dismiss="alert" arialabel="close">&times;</a>
 {{/if}}
