--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -21,7 +21,7 @@
 						<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Video
 							Jots</a>
 						<div class="dropdown-menu">
-							<a href="" class="dropdown-item">Videos</a>
+							<a href="/video/listVideos" class="dropdown-item">Videos</a>
 							<a href="/video/addVideo" class="dropdown-item">Add Video</a>
 						</div>
 					</li>
