--- a/views/video/listVideos.handlebars
+++ b/views/video/listVideos.handlebars
@@ -12,13 +12,13 @@
 						<div class="col-sm-12 col-md-12 col-lg-3">
 							<p class="font-italic">Subtitles</p>
 							<p class="text-info">
-								{{subtitles}}
+								{{displaySubLang subtitles}}
 							</p>
 						</div>
 						<div class="col-sm-12 col-md-12 col-lg-3">
 							<p class="font-italic">Language</p>
 							<p class="text-info">
-								{{language}}
+								{{displaySubLang language}}
 							</p>
 						</div>
 						<div class="col-sm-12 col-md-12 col-lg-2">
