--- a/views/video/addVideo.handlebars
+++ b/views/video/addVideo.handlebars
@@ -1,18 +1,29 @@
-<!--.col-	.col-sm-	.col-md-	.col-lg-	.col-xl- -->
 <div class="container">
 	<div class="card card-body">
 		<h3>Add Video Jot</h3>
 		<form action="/video/addVideo" method="post" id="addVideo">
+		<div class="row">
+			<div class="col-lg-9">
 			<div class="form-group">
-				{{!-- Practical 5 Exercise 2: Add a title input text here named 'title'--}}
 				<label for="title">Title</label>
-				<input type="text" name="title" class="form-control">
+				<input type="text" name="title" onclick="this.focus()" class="form-control" id="title" onblur="capitalise()">
+				<a href="#" onclick="getMovie()" tabindex="-1" class="card-link"><i class="fas fa-film"></i> Get Open Movie DB Data</a>
+				<span class="font-weight-bold text-info" id="OMDBerror" style="display: none;">Unavailable</span>
 			</div>
 			<div class="form-group mb-4">
 				<label class="font-italic" for="story">Story</label>
 				<textarea class="form-control" id="story" name="story" rows="7"></textarea>
 			</div>
-
+			<div class="form-group">
+				<label for="starring">Starring</label>
+				<input type="text" name="starring" class="form-control" id="starring">
+			</div>
+		</div>
+		<div class="col-lg-3">
+			<img id="poster" src="/img/no-image.jpg" alt="" class="border img-thumbnail img-fluid" style="height: 95%;width: 100%;">
+			<input type="hidden" name="posterURL" id="posterURL">
+		</div>
+		</div>
 			<div class="form-group">
 				<div class="row mb-2">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
@@ -22,7 +33,6 @@
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 						<label class="font-italic">Language</label>
 						<br>
-					{{!-- Practical 5 Exercise 2: Language radio buttons here'--}}
 						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="checkbox" name="language" id="chinese" value="chinese" onclick="checkLastLanguage()">
 							<label class="form-check-label" for="chinese">Chinese</label>
@@ -65,11 +75,6 @@
 							<input class="form-check-input" type="checkbox" name="subtitles" id="tamil" value="tamil">
 							<label class="form-check-label" for="tamil">Tamil</label>
 						</div>
-						{{!--<div class="form-check form-check-inline">
-							<div class="form-group">
-								<input type="text" class="form-control form-control-sm" name="otherSub" id="otherSub" placeholder="Other">
-							</div>
-						</div>--}}
 					</div>
 
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
