--- a/views/video/editVideo.handlebars
+++ b/views/video/editVideo.handlebars
@@ -2,16 +2,26 @@
 	<div class="card card-body">
 		<h3>Edit Video Jot</h3>
 		<form action="/video/edit/{{video.id}}?_method=PUT" method="post">
-			<div class="form-group">
-				{{!-- Practical 5 Exercise 2: Add a title input text here named 'title'--}}
+		<div class="row">
+			<div class="col-lg-9">
+				<div class="form-group">
 				<label for="title">Title</label>
-				<input type="text" name="title" class="form-control" value="{{video.title}}">
+				<input id="title" type="text" name="title" class="form-control" value="{{video.title}}" onblur="capitalise()">
 			</div>
 			<div class="form-group mb-4">
 				<label class="font-italic" for="story">Story</label>
 				<textarea class="form-control" id="story" name="story" rows="7">{{video.story}}</textarea>
 			</div>
-
+			<div class="form-group">
+				<label for="starring">Starring</label>
+				<input type="text" name="starring" class="form-control" id="starring" value="{{video.starring}}">
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img id="poster" src="{{video.poster}}" alt="" class="border img-thumbnail img-fluid" style="height: 95%;width: 100%;">
+				<input type="hidden" name="posterURL" id="posterURL">
+			</div>
+		</div>
 			<div class="form-group">
 				<div class="row mb-2">
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
@@ -21,7 +31,6 @@
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 						<label class="font-italic">Language</label>
 						<br>
-					{{!-- Practical 5 Exercise 2: Language radio buttons here'--}}
 						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="checkbox" name="language" id="chinese" value="chinese" onclick="checkLastLanguage()" {{video.chineseLang}}>
 							<label class="form-check-label" for="chinese">Chinese</label>
@@ -64,11 +73,6 @@
 							<input class="form-check-input" type="checkbox" name="subtitles" id="tamil" value="tamil" {{video.tamilSub}}>
 							<label class="form-check-label" for="tamil">Tamil</label>
 						</div>
-						{{!--<div class="form-check form-check-inline">
-							<div class="form-group">
-								<input type="text" class="form-control form-control-sm" name="otherSub" id="otherSub" placeholder="Other">
-							</div>
-						</div>--}}
 					</div>
 
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6">
@@ -101,7 +105,7 @@
 					</div>
 				</div>
 
-			</div>video.
+			</div>
 			<br>
 			<button id="btnSubmit" type="submit" class="btn btn-primary">Save</button>
 		</form>
