--- a/views/video/addVideo.handlebars
+++ b/views/video/addVideo.handlebars
@@ -20,8 +20,10 @@
 			</div>
 		</div>
 		<div class="col-lg-3">
+			<input type="file" name="posterUpload" id="posterUpload" accept="image/png, image/jpg, image/jpeg, image/gif">
 			<img id="poster" src="/img/no-image.jpg" alt="" class="border img-thumbnail img-fluid" style="height: 95%;width: 100%;">
 			<input type="hidden" name="posterURL" id="posterURL">
+			<div class="font-weight-bold text-danger small" id="posterErr" style="display: none;"></div>
 		</div>
 		</div>
 			<div class="form-group">
